tests/parse_print/random_perturb/set01/delete-01/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/delete-01/delete-01.essence:1:1:
  |
1 | laguage Essence 1.3
  | ^^^^^^^^^^^^^^^^^^^
Skipped tokens
